--- a/assets/css/navbar.css
+++ b/assets/css/navbar.css
@@ -25,6 +25,7 @@
 
 .navbar-nav .nav-link {
     font-size: 1.05rem;
+    font-weight: bold;
     position: relative;
     padding: 0.5rem 1rem;
     transition: color 0.3s ease;
