--- a/assets/css/utils.css
+++ b/assets/css/utils.css
@@ -7,6 +7,7 @@
     --color-cards: linear-gradient(135deg, #032177, #060935);;
 
     --border-color:  linear-gradient(135deg, rgba(95, 126, 251, 0.5) 0%, rgba(3, 13, 57, 0.29) 65%);
+    --accent-color: #47b2e4;
 }
 
 * {
