--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -129,7 +129,7 @@
     }
 
     .hero-btn {
-        font-size: 1.1rem;
+        font-size: 0.5rem;
         padding: 0.65rem 2rem;
     }
 }
@@ -499,6 +499,13 @@ section, .container.py-4, .container.py-5 {
 
     #testimonialsCarousel .carousel-control-next {
         right: -30px;
+    }
+
+    .logo-card {
+        width: 100px;
+        height: 80px;
+        padding: 0.5rem;
+        margin-right: 1rem;
     }
 }
 
